src/components/App.css
.App {
  text-align: center;
  width: 100vw;
  height: 100vh;
}

body {
  color: #545454;
  /* font: 500 20px/26px 'Helvetica Neue', Helvetica, Arial, Sans-serif; */
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  font-family: "Roboto Condensed",Arial,Helvetica,sans-serif!important;
}

.navbar {
  background-color: rgb(255, 255, 255);
  margin: 0;
  /* padding: 0 0 5px 0; */
  display: flex;
  justify-content: space-between;
  border-bottom: 3px solid;
  border-color: #18847d;
}

#header-text-container {
  border-bottom: 3px solid;
  border-color: #000000;
  padding: 10px;
  text-transform: uppercase;
  background-color: #17B0A3;
}

#header-text {
  margin: 0;
  color: #f5f5f5;
  font-weight: 500;
}

#logo-img {
  padding: 15px 20px 10px 10px;
}

#bestbuy-logo {
  max-height: 40px;
  padding: 0 5px;
}

.mapboxgl-popup-close-button {
  display: visible;
}

.mapboxgl-popup-content {
  font: 400 15px/22px 'Source Sans Pro', 'Helvetica Neue', Sans-serif;
  padding: 0;
  width: 100%;
}


.mapboxgl-popup-content h3 {
  margin: 0;
  display: block;
  padding: 15px;
  border-bottom: 2px solid;
  border-color: #18847d;
  border-radius: 0;
  background-color: #13a89e;
  color: #fff;
}

.mapboxgl-popup-content h4 {
  margin: 0;
  display: block;
  padding: 2px 15px;
  font-weight: 400;
}

.mapboxgl-popup-content div {
  border: .1px solid #18847d;
  font-family: "Roboto Condensed",Arial,Helvetica,sans-serif;
  font-weight: 700;
}

.mapboxgl-container .leaflet-marker-icon {
  cursor: pointer;
}

.popup-header-title {
  margin-bottom: 5px;
  margin-left: 5px;
}
.popup-distance {
  margin: 10px 50px;
  padding: 0;
}

.popup-button {
  font-size: 14px;
  text-transform: uppercase;
  border-bottom: 3px solid;
  border-color: #18847d;
  border-radius: 0;
  background-color: #13a89e;
  color: #fff;
  max-width: 100%;
  margin: 10px;
  padding: 10px;
}

.noZip {
  font-weight: 700;
  color: #545454;
  text-transform: uppercase;
  font-size: 2rem;
  border-bottom: 3px solid;
  border-color: #18847d;
}

#map-container {
  background-color: #f5f5f5;
}

.mapboxgl-canvas {
  outline: none;
}

